cmake_minimum_required(VERSION 2.8)
project( HW4 )
find_package( OpenCV )
set(OpenCV_LIBS_DIR "/usr/local/Cellar/opencv3/HEAD-d1bbc0b_4/lib")
set(OpenCV_INCLUDE_DIRS "/usr/local/Cellar/opencv3/HEAD-d1bbc0b_4/include")
set(OpenCV_LIBS opencv_core opencv_imgcodecs opencv_imgproc opencv_calib3d opencv_video opencv_features2d opencv_ml opencv_highgui opencv_objdetect opencv_videoio)
link_directories(${OpenCV_LIBS_DIR})
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( main main.cpp )
target_link_libraries( main ${OpenCV_LIBS} )
